--- a/Cooleaf/Application Controllers/HomeTab/NPHomeCell.xib
+++ b/Cooleaf/Application Controllers/HomeTab/NPHomeCell.xib
@@ -7,7 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="NPHomeCell" id="KGk-i7-Jjw" customClass="NPHomeCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="NPHomeCell" rowHeight="245" id="KGk-i7-Jjw" customClass="NPHomeCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="245"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -15,16 +15,13 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="CoverPhotoPlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="tTt-XT-3l4">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="145"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="155"/>
                     </imageView>
                     <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Nh5-Xt-hfc" userLabel="Slide bar content">
-                        <rect key="frame" x="0.0" y="145" width="320" height="45"/>
+                        <rect key="frame" x="0.0" y="155" width="320" height="90"/>
                         <subviews>
-                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="kKy-BD-N8o" userLabel="Loading indicator">
-                                <rect key="frame" x="260" y="11" width="20" height="20"/>
-                            </activityIndicatorView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jlP-Sl-Muv">
-                                <rect key="frame" x="220" y="0.0" width="100" height="45"/>
+                                <rect key="frame" x="220" y="0.0" width="100" height="90"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                 <state key="normal" title="I'm in!">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -34,11 +31,14 @@
                                     <action selector="joinTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="shE-cd-9cU"/>
                                 </connections>
                             </button>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="kKy-BD-N8o" userLabel="Loading indicator">
+                                <rect key="frame" x="260" y="11" width="20" height="20"/>
+                            </activityIndicatorView>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JHb-0P-1fL" userLabel="Slide content">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="45"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oFE-cD-boZ">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="45"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
                                         <color key="backgroundColor" red="0.30588235289999999" green="0.80392156859999997" blue="0.76862745099999996" alpha="1" colorSpace="calibratedRGB"/>
                                     </view>
                                     <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="AttendeeIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Kfj-QA-Qnt">
@@ -64,7 +64,7 @@
                         <color key="backgroundColor" red="0.08235294118" green="0.53725490200000003" blue="0.83137254900000002" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <textView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" text="#HASHTAG1 #HASHTAG2" translatesAutoresizingMaskIntoConstraints="NO" id="Wuz-F1-706">
-                        <rect key="frame" x="10" y="115" width="300" height="24"/>
+                        <rect key="frame" x="10" y="125" width="300" height="24"/>
                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -76,7 +76,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <view hidden="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BuR-h4-IKk" userLabel="Selection View">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="245"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="230"/>
                     </view>
                 </subviews>
             </tableViewCellContentView>
